# gitlearning

./: pyproject.toml
article/: models.py  permissions.py  serializers.py  urls.py  views.py
article/migrations/: 0001_initial.py
project/: settings.py  urls.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_is_stuff.py  0003_rename_is_stuff_user_is_staff.py
